# openxml-rust

./: Cargo.toml
src/: extract.rs  main.rs
